--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-aiogram==3.3.0
-aiohttp==3.9.1
-python-dotenv==1.0.1
-requests==2.31.0
-nltk==3.9.1 
+aiogram
+aiohttp
+python-dotenv
+requests
+nltk
